--- a/monitoring/docker-compose.monitoring.yml
+++ b/monitoring/docker-compose.monitoring.yml
@@ -14,7 +14,7 @@ services:
       - ./prometheus/alerts.yml:/etc/prometheus/alerts.yml:ro
       - ./prometheus/data:/prometheus
     networks:
-      - kigaprio_monitoring
+      - priotag_monitoring
       - proxy
     expose:
       - 9090
@@ -57,7 +57,7 @@ services:
   #     - ./grafana/provisioning:/etc/grafana/provisioning:ro
   #     - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
   #   networks:
-  #     - kigaprio_monitoring
+  #     - priotag_monitoring
   #     - proxy
   #   expose:
   #     - 3000
@@ -106,7 +106,7 @@ services:
       - ./alertmanager/data:/alertmanager
       - ./alertmanager/templates/:/etc/alertmanager/templates:ro
     networks:
-      - kigaprio_monitoring
+      - priotag_monitoring
     expose:
       - 9093
     secrets:
@@ -120,7 +120,7 @@ services:
       - ALL
 
 networks:
-  kigaprio_monitoring:
+  priotag_monitoring:
     external: true
   proxy:
     external: true
