--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "kigaprio"
+name = "priotag"
 version = "0.1.0"
 description = "Small web application to collect images with priorites, analyze them and then generate prio list in an excel sheet"
 readme = "README.md"
@@ -57,7 +57,7 @@ requires = ["uv_build>=0.8.17,<0.9.0"]
 build-backend = "uv_build"
 
 [tool.setuptools]
-packages = [{include = "kigaprio", from = "src"}]
+packages = [{include = "priotag", from = "src"}]
 
 [tool.ruff]
 target-version = "py311"
@@ -109,7 +109,7 @@ markers = [
 addopts = [
     "--strict-markers",
     "--tb=short",
-    "--cov=kigaprio",
+    "--cov=priotag",
     "--cov-report=term-missing",
     "--cov-report=html",
     "--cov-branch"
