--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,7 +4,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
       target: development
-    image: kigaprio-backend:dev
+    image: priotag-backend:dev
     volumes:
       - ./backend/src:/app/src
       - ./backend/tests:/app/tests
@@ -18,7 +18,7 @@ services:
       - POCKETBASE_URL=http://pocketbase:8090
     ports:
       - "8000:8000"
-    command: uv run uvicorn kigaprio.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uv run uvicorn priotag.main:app --host 0.0.0.0 --port 8000 --reload
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/v1/health"]
       interval: 10s
@@ -41,7 +41,7 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
       target: development
-    image: kigaprio-frontend:dev
+    image: priotag-frontend:dev
     volumes:
       # Mount entire frontend directory for hot reload
       - ./frontend:/app
@@ -63,7 +63,7 @@ services:
         - USER_UID=1000
         - USER_GID=1000
         - PB_VERSION=0.30.2
-    image: kigaprio-pocketbase
+    image: priotag-pocketbase
     restart: unless-stopped
     expose:
       - 8090
@@ -114,7 +114,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
       target: development
-    image: kigaprio-backend:dev
+    image: priotag-backend:dev
     restart: unless-stopped
     volumes:
       - ./backend/src:/app/src
@@ -151,7 +151,7 @@ services:
       context: ./admin_ui
       dockerfile: Dockerfile
       target: development
-    image: kigaprio-admin:dev
+    image: priotag-admin:dev
     volumes:
       # Mount entire frontend directory for hot reload
       - ./admin_ui:/app
