--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -92,6 +92,7 @@ ignore_missing_imports = true
 warn_unused_ignores = true
 warn_redundant_casts = true
 warn_unused_configs = true
+plugins = ['pydantic.mypy']
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
